--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -13,6 +13,6 @@ jobs:
       - name: Update gist
         uses: maxam2017/productive-box@master
         env:
-          GH_TOKEN: ${{ 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 }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GIST_ID: 63383da1581630711515382e1081f918
           TIMEZONE: Asia/Seoul
